Ensure datetimepicker is not behind submit button on mobile
Fixes #265

--- a/babybuddy/static_src/scss/forms.scss
+++ b/babybuddy/static_src/scss/forms.scss
@@ -18,9 +18,12 @@
     pointer-events: none;
 }
 
-// Set default text color for datetime picker.
 .bootstrap-datetimepicker-widget {
+    // Set default text color for datetime picker.
     color: $gray-400;
+
+    // Ensure widget appears above other elements (e.g. .submit-primary).
+    z-index: 1050;
 }
 
 // Datetime picker input styles.
